--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ resume_section_associations:    false
 resume_social_links:
   resume_github_url:            "https://andrewmfiorillo.github.com/"
   resume_twitter_url:           "http://twitter.com/muthebeagle"
-  resume_file-pdf-o_url:        "http://andrewmfiorillo.github.io/resume.pdf"
+  resume_pdf_url:        "http://andrewmfiorillo.github.io/resume.pdf"
   resume_linkedin_url:          "https://www.linkedin.com/in/andrewmfiorillo"
   # resume_instagram_url:         "insert your Instagram URL here"
   resume_website_url:           "http://andrewmfiorillo.github.io/"
