--- a/_config.yml
+++ b/_config.yml
@@ -34,11 +34,10 @@ resume_section_associations:    false
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_github_url:            "https://andrewmfiorillo.github.com/"
+  resume_github_url:            "https://github.com/andrewmfiorillo"
   resume_twitter_url:           "http://twitter.com/muthebeagle"
   resume_pdf_url:               "https://andrewmfiorillo.github.io/resume.pdf"
   resume_linkedin_url:          "https://www.linkedin.com/in/andrewmfiorillo"
-  # resume_instagram_url:         "insert your Instagram URL here"
   resume_website_url:           "http://andrewmfiorillo.github.io/"
 
 # Design settings
