--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,15 @@
 title: "Andrew Fiorillo"
 description: "I'm a software engineer with a passion for physics and mathematics."
-about: "I do work in computer vision, database design, and HPC solutions. I am trying to do more original research in the off-hours. My goal is to learn something novel every day."
+about: "I've been working in computer vision, database design, and HPC solutions.
+My education has been focused on Physics and Mathematics.
+I spend my off hours learning new laguages and tinkering."
+info-text: ""
 location: "Tampa, Florida"
 email: andrewmfiorillo@gmail.com
 baseurl: ""
 url: "https://andrewmfiorillo.github.io/" # replace by your site's url
+resume_link: resume.pdf
+linkedin_username: andrewmfiorillo
 twitter_username: muthebeagle
 github_username:  andrewmfiorillo
 
@@ -16,7 +21,7 @@ isolang: en
 close_btn: "Close"
 home_btn: "Home"
 projects_btn: "Projects"
-about_btn: "About"
+about_btn: "Info"
 posts_btn: "Posts"
 imprint_btn: "Imprint"
 name_badge: "an article by"
