--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,11 +1,7 @@
-- name: project 1
+- name: Analysis of Edge-Enhanced Raman
   link: "#"
-  description: "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam"
+  description: "I wrote my undergraduate thesis on a specific application of Raman spectroscopy: Edge-Enhanced Raman Spectroscopy (EERS). To organize, archive, and analyze this data (~1 TB) I developed a Python package. I'm working on making the source and collected data public."
 
-- name: project 2
-  link: "#"
-  description: "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam"
-
-- name: project 3
-  link: "#"
-  description: "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam"
+- name: deepzoom [-python | -go | ...]
+  link: "https://github.com/andrewmfiorillo/deepzoom-python"
+  description: "Unable to find a good (deepzoom) image server for images that are too large for system memory, I've set about making several. This project is in the early stages and is excitedly developing!"
